--- a/AirQuality.ipynb
+++ b/AirQuality.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "source": [
     "## <center>Analiza poziomu PM2.5 w afrykańskich miastach</center>\n",
-    "### by\n",
+    "### Zespół:\n",
     "<ol>\n",
     "    <li style='font-size: 20px'>Hubert Kłosowski 242424</li>\n",
     "    <li style='font-size: 20px'>Krzysztof Kolanek 242425</li>\n",
@@ -17,14 +17,23 @@
    "id": "d2a096af4d2cacc3"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Potrzebne importy"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "31a57b6008c92140"
+  },
+  {
    "cell_type": "code",
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "from sklearn.preprocessing import LabelEncoder, StandardScaler"
+    "import seaborn as sns"
    ],
    "metadata": {
     "collapsed": false
@@ -46,10 +55,10 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "data = pd.read_csv('data\\\\Train.csv')\n",
-    "final_test = pd.read_csv('data\\\\Test.csv')\n",
+    "train = pd.read_csv('data\\\\Train.csv')\n",
+    "test = pd.read_csv('data\\\\Test.csv')\n",
     "\n",
-    "data.info()"
+    "train.info()"
    ],
    "metadata": {
     "collapsed": false
@@ -61,7 +70,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "data.head()"
+    "train.head()"
    ],
    "metadata": {
     "collapsed": false
@@ -84,14 +93,12 @@
    "outputs": [],
    "source": [
     "def change_date(df):\n",
-    "    data['date'] = pd.to_datetime(data['date'])\n",
-    "    df['day'] = df['date'].dt.dayofweek\n",
+    "    train['date'] = pd.to_datetime(train['date'])\n",
+    "    df['day'] = df['date'].dt.dayofweek.astype(np.int64)\n",
     "    df['month'] = df['month'].astype(np.int64)\n",
-    "    df['year'] = df['date'].dt.year\n",
-    "    # df.drop(columns=['id', 'city', 'country', 'site_id', 'date'], inplace=True)\n",
     "    return df\n",
     "\n",
-    "data = change_date(data)"
+    "train = change_date(train)"
    ],
    "metadata": {
     "collapsed": false
@@ -113,14 +120,14 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "sns.lineplot(data=data, x='date', y='pm2_5', hue='country')\n",
+    "sns.lineplot(data=train, x='date', y='pm2_5', hue='country')\n",
     "plt.title('Jakość powietrza z podziałem na kraje')"
    ],
    "metadata": {
     "collapsed": false
    },
    "id": "c080d74ffd38ea41",
-   "execution_count": 0
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -136,14 +143,14 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "sns.barplot(data=data, x='hour', y='pm2_5', hue='country')\n",
+    "sns.barplot(data=train, x='hour', y='pm2_5', hue='country')\n",
     "plt.title('Jakość powietrza w poszczególnych godzinach z podziałem na kraje')"
    ],
    "metadata": {
     "collapsed": false
    },
    "id": "1cc187b6375c9eb4",
-   "execution_count": 0
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -159,14 +166,14 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "sns.barplot(data=data, x='month', y='pm2_5', hue='country')\n",
+    "sns.barplot(data=train, x='month', y='pm2_5', hue='country')\n",
     "plt.title('Jakość powietrza w poszczególnych miesiącach z podziałem na kraje')"
    ],
    "metadata": {
     "collapsed": false
    },
    "id": "36c6ec9520527975",
-   "execution_count": 0
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -183,16 +190,18 @@
    "outputs": [],
    "source": [
     "def correlation():\n",
-    "    columns = data.columns.str.split('_', expand=True).levels[0].to_frame()\n",
-    "    columns.drop(['year', 'month', 'day', 'hour', 'pm2'], inplace=True)\n",
-    "    columns = columns[0].tolist()\n",
-    "    for i, el in enumerate(columns):\n",
+    "    for i, el in enumerate(starts_with):\n",
     "        fig, ax = plt.subplots(figsize=(10, 10))\n",
-    "        selected_columns = [col for col in data.columns if col.startswith(el) or col == 'pm2_5']\n",
-    "        sns.heatmap(data[selected_columns].corr(), annot=True, fmt='.2f', cmap='viridis', ax=ax)\n",
+    "        selected_columns = [col for col in train.columns if col.startswith(el) or col == 'pm2_5']\n",
+    "        sns.heatmap(train[selected_columns].corr(), annot=True, fmt='.2f', cmap='viridis', ax=ax)\n",
     "        plt.tight_layout()\n",
     "        plt.show()\n",
-    "    \n",
+    "\n",
+    "train.drop(columns=['id', 'city', 'country', 'site_id', 'date'], inplace=True)\n",
+    "starts_with = train.columns.str.split('_', expand=True).levels[0].to_frame()\n",
+    "starts_with.drop(['month', 'day', 'hour', 'pm2'], inplace=True)\n",
+    "starts_with = starts_with[0].tolist()\n",
+    "\n",
     "correlation()"
    ],
    "metadata": {
@@ -202,50 +211,211 @@
    "execution_count": null
   },
   {
-   "cell_type": "code",
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
-    "data"
+    "## <center>Czyszczenie danych</center>"
    ],
    "metadata": {
     "collapsed": false
    },
-   "id": "a722d17c79b16e8a",
+   "id": "ab3216061cba4b3a"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Wykresy pudełkowe wskazujące wartości odstające dla sulphurdioxide"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "9af06f017aaea4c3"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "def plot_boxplots(column_group='sulphurdioxide'):\n",
+    "    fig, ax = plt.subplots(nrows=3, ncols=3, figsize=(20, 20))\n",
+    "    similar_columns = [el for el in train.columns if el.startswith(column_group)]\n",
+    "    for i, column in enumerate(similar_columns):\n",
+    "        x, y = divmod(i, 3)\n",
+    "        train[column].plot(kind='box', ax=ax[x][y])\n",
+    "\n",
+    "plot_boxplots()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "7901bc4c9d7d1412",
+   "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 1. Usunięcie wartości odstających przy użyciu metody zscore"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "a767724811d79e3c"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "from scipy.stats import zscore\n",
+    "\n",
+    "def del_outliers(dataframe):\n",
+    "    for col in dataframe.columns:\n",
+    "        vec, indexes = zscore(dataframe[col], nan_policy='omit'), []\n",
+    "        for i in range(len(vec)):\n",
+    "            if -3 <= vec[i] >= 3:\n",
+    "                indexes.append(i)\n",
+    "        dataframe.drop(index=indexes, inplace=True)\n",
+    "    return dataframe\n",
+    "\n",
+    "train = del_outliers(train)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "1e31da0f18fee574",
+   "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Wykresy przedstawiające ilość NaN w danej kolumnie w zależności od przyjętej jednostki czasu dla sulphurdioxide"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "fe2fc5c33fc856fe"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "def plot_nans_based_on(date_unit='month', column_group='sulphurdioxide'):\n",
+    "    fig, ax = plt.subplots(nrows=3, ncols=3, figsize=(20, 20))\n",
+    "    similar_columns = [el for el in train.columns if el.startswith(column_group)]\n",
+    "    for i, column in enumerate(similar_columns):\n",
+    "        x, y = divmod(i, 3)\n",
+    "        nans = train[[column, date_unit]].groupby(date_unit).apply(lambda el: el.isna().sum())\n",
+    "        nans.plot(kind='bar', x=date_unit, y=column, ax=ax[x][y])\n",
+    "\n",
+    "plot_nans_based_on()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "6d6253f26d721fb",
+   "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 2. Uzupełnienie wartości brakujacych"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "ba2f9b8e1bcb96ad"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "from sklearn.impute import KNNImputer\n",
+    "\n",
+    "def fill_based_on(dataframe, date_unit='month'):  # uzupelnienie NaN\n",
+    "    date_range = dataframe[date_unit].unique()\n",
+    "    knn_imputer = KNNImputer(n_neighbors=10, weights='distance')\n",
+    "    for date in date_range:\n",
+    "        for column in starts_with:\n",
+    "            similar_columns = [el for el in dataframe.columns if el.startswith(column)]  # wybieramy kolumny o podobnym znaczeniu\n",
+    "            df = dataframe.loc[dataframe[date_unit] == date, similar_columns]  # wybieramy fragment df w tej samej jednostce czasu dla tych grup kolumn\n",
+    "            if df.empty is not True:  # jesli zostaly znalezione jakies rekordy\n",
+    "                dataframe.loc[dataframe[date_unit] == date, similar_columns] = knn_imputer.fit_transform(df)\n",
+    "    return dataframe\n",
+    "\n",
+    "def prepare_dataframe(dataframe):  # usuwamy kolumny o dużej liczbie wartości NaN\n",
+    "    to_drop = []\n",
+    "    for i, el in enumerate(dataframe.columns):\n",
+    "        if dataframe[el].isnull().sum() / len(dataframe) * 100 >= 61:\n",
+    "            to_drop.append(el)\n",
+    "    dataframe.drop(to_drop, axis=1, inplace=True)\n",
+    "    return dataframe\n",
+    "    \n",
+    "train = prepare_dataframe(train)\n",
+    "train = fill_based_on(train)\n",
+    "\n",
+    "train.info()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "133fbc1ffe6ae43a",
    "execution_count": null
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "data.columns"
+    "train.head()"
    ],
    "metadata": {
     "collapsed": false
    },
-   "id": "c8af4081d60b50bf",
+   "id": "e08be14ef0b05bda",
    "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### <center>Transformacja danych</center>"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "a8b9be23efdbd904"
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "data['sulphurdioxide_so2_column_number_density'].describe()"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "sts = StandardScaler()\n",
+    "sts.fit(train)\n",
+    "train = sts.transform(train)"
    ],
    "metadata": {
     "collapsed": false
    },
-   "id": "725ff6f471ab9dc2",
+   "id": "3a48dc86e55f85b5",
    "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Proces nauki sieci neuronowej"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "aff1a14b2bea3818"
   },
   {
    "cell_type": "code",
    "outputs": [],
-   "source": [],
+   "source": [
+    "import torch"
+   ],
    "metadata": {
     "collapsed": false
    },
-   "id": "55835690d3deea69",
-   "execution_count": null
+   "id": "5bbca20bcc1becc8"
   }
  ],
  "metadata": {
