model gotowy, ale przypomniec sobie jak dziala regresja

--- a/AirQuality.ipynb
+++ b/AirQuality.ipynb
@@ -190,7 +190,7 @@
    "outputs": [],
    "source": [
     "def correlation():\n",
-    "    for i, el in enumerate(starts_with):\n",
+    "    for index, el in enumerate(starts_with):\n",
     "        fig, ax = plt.subplots(figsize=(10, 10))\n",
     "        selected_columns = [col for col in train.columns if col.startswith(el) or col == 'pm2_5']\n",
     "        sns.heatmap(train[selected_columns].corr(), annot=True, fmt='.2f', cmap='viridis', ax=ax)\n",
@@ -237,8 +237,8 @@
     "def plot_boxplots(column_group='sulphurdioxide'):\n",
     "    fig, ax = plt.subplots(nrows=3, ncols=3, figsize=(20, 20))\n",
     "    similar_columns = [el for el in train.columns if el.startswith(column_group)]\n",
-    "    for i, column in enumerate(similar_columns):\n",
-    "        x, y = divmod(i, 3)\n",
+    "    for index, column in enumerate(similar_columns):\n",
+    "        x, y = divmod(index, 3)\n",
     "        train[column].plot(kind='box', ax=ax[x][y])\n",
     "\n",
     "plot_boxplots()"
@@ -267,14 +267,14 @@
     "\n",
     "def del_outliers(dataframe):\n",
     "    for col in dataframe.columns:\n",
-    "        vec, indexes = zscore(dataframe[col], nan_policy='omit'), []\n",
-    "        for i in range(len(vec)):\n",
-    "            if -3 <= vec[i] >= 3:\n",
-    "                indexes.append(i)\n",
+    "        vec, indexes = zscore(dataframe[col]), []\n",
+    "        for index in range(len(vec)):\n",
+    "            if -3 <= vec[index] >= 3:\n",
+    "                indexes.append(index)\n",
     "        dataframe.drop(index=indexes, inplace=True)\n",
     "    return dataframe\n",
     "\n",
-    "train = del_outliers(train)"
+    "# train = del_outliers(train)"
    ],
    "metadata": {
     "collapsed": false
@@ -299,8 +299,8 @@
     "def plot_nans_based_on(date_unit='month', column_group='sulphurdioxide'):\n",
     "    fig, ax = plt.subplots(nrows=3, ncols=3, figsize=(20, 20))\n",
     "    similar_columns = [el for el in train.columns if el.startswith(column_group)]\n",
-    "    for i, column in enumerate(similar_columns):\n",
-    "        x, y = divmod(i, 3)\n",
+    "    for index, column in enumerate(similar_columns):\n",
+    "        x, y = divmod(index, 3)\n",
     "        nans = train[[column, date_unit]].groupby(date_unit).apply(lambda el: el.isna().sum())\n",
     "        nans.plot(kind='bar', x=date_unit, y=column, ax=ax[x][y])\n",
     "\n",
@@ -341,7 +341,7 @@
     "\n",
     "def prepare_dataframe(dataframe):  # usuwamy kolumny o dużej liczbie wartości NaN\n",
     "    to_drop = []\n",
-    "    for i, el in enumerate(dataframe.columns):\n",
+    "    for index, el in enumerate(dataframe.columns):\n",
     "        if dataframe[el].isnull().sum() / len(dataframe) * 100 >= 61:\n",
     "            to_drop.append(el)\n",
     "    dataframe.drop(to_drop, axis=1, inplace=True)\n",
@@ -399,7 +399,97 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Proces nauki sieci neuronowej"
+    "### Praca z PyTorch\n",
+    "<ol>\n",
+    "    <li>Ustalanie karty graficznej jako urządzenia na którym proces nauki modelu zostanie wykonany</li>\n",
+    "    <li>Konwersja train na tensor_train i umieszczenie go w pamięci karty graficznej</li>\n",
+    "    <li>Zaprojektowanie architektury sieci neuronowej</li>\n",
+    "    <li>Proces nauki</li>\n",
+    "    <li>Zapisanie modelu<li>\n",
+    "</ol>"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "e22517d482f4190b"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Potrzebne importy"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "eae50f8387e668ab"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from torch import nn, optim, randperm"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "537a6c450bd1efa2",
+   "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 1. Wybór karty graficznej do nauki modelu"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "dc5320265765f88d"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "device = (\n",
+    "    'cuda'\n",
+    "    if torch.cuda.is_available()\n",
+    "    else 'mps'\n",
+    "    if torch.backends.mps.is_available()\n",
+    "    else 'cpu'\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "e1ea7f2091127d19",
+   "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 2. Przeniesienie train do pamięci karty graficznej z podziałem na zbiór treningowy i testowy"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "5c70912092f074e4"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "tensor_train = torch.tensor(train, device=device)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "683541f15475f393",
+   "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 3. Architektura sieci neuronowej"
    ],
    "metadata": {
     "collapsed": false
@@ -410,12 +500,67 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "import torch"
+    "model = nn.Sequential(\n",
+    "    nn.Linear(tensor_train.shape[0], 64),\n",
+    "    nn.ReLU(),\n",
+    "    nn.Linear(64, 128),\n",
+    "    nn.ReLU(),\n",
+    "    nn.Linear(128, 72),\n",
+    "    nn.ReLU(),\n",
+    "    nn.Linear(72, 1),\n",
+    ").to(device)\n",
+    "\n",
+    "loss_fn = nn.MSELoss()\n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.001)"
    ],
    "metadata": {
     "collapsed": false
    },
-   "id": "5bbca20bcc1becc8"
+   "id": "5bbca20bcc1becc8",
+   "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 4. Nauka sieci neuronowej"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "17f3f743712603d7"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "n_epochs = 100  # przypomniec sobie\n",
+    "batch_size = 10\n",
+    "\n",
+    "for epoch in range(n_epochs):\n",
+    "    tensor_train = tensor_train[randperm(tensor_train.shape[0]), :]\n",
+    "    loss_value = 0.0\n",
+    "    for i, data in enumerate(tensor_train, 0):\n",
+    "        optimizer.zero_grad()\n",
+    "        \n",
+    "        outputs = model(data)\n",
+    "        \n",
+    "        loss = loss_fn(outputs, loss_value)\n",
+    "        \n",
+    "        loss.backward()\n",
+    "        \n",
+    "        optimizer.step()\n",
+    "        \n",
+    "        loss_value += loss.item()\n",
+    "        if i % 10 == 0:\n",
+    "          print('Loss after mini-batch %5d: %.3f' %\n",
+    "                (i + 1, loss_value / 500))\n",
+    "          loss_value = 0.0"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "ee01653bc24ee293",
+   "execution_count": null
   }
  ],
  "metadata": {
