cos zlego sie dzieje

--- a/AirQuality.ipynb
+++ b/AirQuality.ipynb
@@ -155,7 +155,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Wykres przedstawiający wartość pm2_5 z zależności od miesięcy i krajów"
+    "### Wykres przedstawiający wartość pm2_5 z zależności od dnia tygodnia"
    ],
    "metadata": {
     "collapsed": false
@@ -166,13 +166,36 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "sns.barplot(data=data, x='month', y='pm2_5', hue='country')\n",
-    "plt.title('Jakość powietrza w poszczególnych miesiącach z podziałem na kraje')"
+    "sns.barplot(data=data, x='day', y='pm2_5', hue='country')\n",
+    "plt.title('Jakość powietrza w każdym dniu tygodnia z podziałem na kraje')"
    ],
    "metadata": {
     "collapsed": false
    },
    "id": "36c6ec9520527975",
+   "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Wykres przedstawiający wartość pm2_5 z zależności od miesiąca"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "c018df974513e0e3"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "sns.barplot(data=data, x='month', y='pm2_5', hue='country')\n",
+    "plt.title('Jakość powietrza w każdym dniu tygodnia z podziałem na kraje')"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "18b6234a9ec5ca95",
    "execution_count": null
   },
   {
@@ -225,71 +248,6 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Wykresy pudełkowe wskazujące wartości odstające"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "9af06f017aaea4c3"
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [
-    "def plot_boxplots():\n",
-    "    for index, column_group in enumerate(starts_with):\n",
-    "        similar_columns = [el for el in data.columns if el.startswith(column_group)]\n",
-    "        fig, ax = plt.subplots(nrows=int(np.ceil(len(similar_columns) / 4)), ncols=4, figsize=(20, 20))\n",
-    "        fig.suptitle(column_group, fontsize=15)\n",
-    "        for j, column in enumerate(similar_columns):\n",
-    "            x_cord, y_cord = divmod(j, 4)\n",
-    "            data[column].plot(kind='box', ax=ax[x_cord][y_cord])\n",
-    "        plt.show()\n",
-    "\n",
-    "plot_boxplots()"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "7901bc4c9d7d1412",
-   "execution_count": null
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### 1. Usunięcie wartości odstających przy użyciu metody zscore"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "a767724811d79e3c"
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [
-    "from scipy.stats import zscore\n",
-    "\n",
-    "def del_outliers(dataframe, column):\n",
-    "    vec, indexes = zscore(dataframe[column]), []\n",
-    "    for index in range(len(vec)):\n",
-    "        if -2.5 <= vec[index] >= 2.5:\n",
-    "            indexes.append(index)\n",
-    "    dataframe.drop(index=indexes, inplace=True)\n",
-    "    return dataframe\n",
-    "\n",
-    "data = del_outliers(data, 'sulphurdioxide_so2_column_number_density_amf')\n",
-    "test = del_outliers(test, 'sulphurdioxide_so2_column_number_density_amf')"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "1e31da0f18fee574",
-   "execution_count": null
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
     "### Wykresy przedstawiające ilość NaN w danej kolumnie w zależności od przyjętej jednostki czasu"
    ],
    "metadata": {
@@ -322,7 +280,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### 2. Uzupełnienie wartości brakujących"
+    "### 1. Uzupełnienie wartości brakujących"
    ],
    "metadata": {
     "collapsed": false
@@ -364,6 +322,84 @@
     "collapsed": false
    },
    "id": "133fbc1ffe6ae43a",
+   "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Wykresy pudełkowe wskazujące wartości odstające"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "9af06f017aaea4c3"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "def plot_boxplots():\n",
+    "    for index, column_group in enumerate(starts_with):\n",
+    "        similar_columns = [col for col in data.columns if col.startswith(column_group)]\n",
+    "        rows = int(np.ceil(len(similar_columns) / 4))\n",
+    "        if rows >= 1:\n",
+    "            fig, ax = plt.subplots(nrows=int(np.ceil(len(similar_columns) / 4)), ncols=4, figsize=(20, 20))\n",
+    "            fig.suptitle(column_group, fontsize=15)\n",
+    "            for j, column in enumerate(similar_columns):\n",
+    "                x_cord, y_cord = divmod(j, 4)\n",
+    "                data[column].plot(kind='box', ax=ax[x_cord][y_cord])\n",
+    "            plt.show()\n",
+    "\n",
+    "plot_boxplots()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "7901bc4c9d7d1412",
+   "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 2. Usunięcie wartości odstających"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "a767724811d79e3c"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "from scipy.stats import zscore\n",
+    "\n",
+    "def del_big_outliers(dataframe, column):\n",
+    "    vec, indexes = zscore(dataframe[column]), []\n",
+    "    for index in range(len(vec)):\n",
+    "        if vec[index] >= 2.5:\n",
+    "            indexes.append(index)\n",
+    "    dataframe.drop(index=indexes, inplace=True)\n",
+    "    return dataframe\n",
+    "\n",
+    "# data = del_big_outliers(data, '')"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "1e31da0f18fee574",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "data.info()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "3463da86e8af6bd7",
    "execution_count": null
   },
   {
@@ -710,6 +746,7 @@
     "### Dodatkowe informacje\n",
     "<ol>\n",
     "    <li>The 15km SO2 band is ingested only when solar_zenith_angle < 70.</li>\n",
+    "    <li>Because of noise on the data, negative vertical column values are often observed in particular over clean regions or for low SO2 emissions. It is recommended not to filter these values except for outliers, i.e. for vertical columns lower than -0.001 mol/m^2.</li>\n",
     "</ol>"
    ],
    "metadata": {
