--- a/AirQuality.ipynb
+++ b/AirQuality.ipynb
@@ -227,7 +227,7 @@
     "starts_with.drop(['month', 'day', 'hour', 'pm2'], inplace=True)\n",
     "starts_with = starts_with[0].tolist()\n",
     "\n",
-    "correlation()"
+    "# correlation()"
    ],
    "metadata": {
     "collapsed": false
@@ -269,7 +269,7 @@
     "            nans.plot(kind='bar', x=date_unit, y=column, ax=ax[x_cord][y_cord])\n",
     "        plt.show()\n",
     "\n",
-    "plot_nans_based_on()"
+    "# plot_nans_based_on()"
    ],
    "metadata": {
     "collapsed": false
@@ -314,7 +314,7 @@
     "    dataframe.drop(to_drop, axis=1, inplace=True)\n",
     "    return dataframe\n",
     "\n",
-    "imputers = [KNNImputer(n_neighbors=7, weights='distance') for _ in range(len(starts_with))]\n",
+    "imputers = [KNNImputer(n_neighbors=10, weights='distance') for _ in range(len(starts_with))]\n",
     "data, test = prepare_dataframe(data), prepare_dataframe(test)\n",
     "data, test = fill_based_on(data), fill_based_on(test)"
    ],
@@ -350,7 +350,7 @@
     "                data[column].plot(kind='box', ax=ax[x_cord][y_cord])\n",
     "            plt.show()\n",
     "\n",
-    "plot_boxplots()"
+    "# plot_boxplots()"
    ],
    "metadata": {
     "collapsed": false
@@ -377,12 +377,12 @@
     "def del_big_outliers(dataframe, column):\n",
     "    vec, indexes = zscore(dataframe[column]), []\n",
     "    for index in range(len(vec)):\n",
-    "        if vec[index] >= 2.5:\n",
+    "        if -2.5 <= vec[index] >= 2.5:\n",
     "            indexes.append(index)\n",
     "    dataframe.drop(index=indexes, inplace=True)\n",
     "    return dataframe\n",
     "\n",
-    "# data = del_big_outliers(data, '')"
+    "data = del_big_outliers(data, 'sulphurdioxide_so2_column_number_density')"
    ],
    "metadata": {
     "collapsed": false
@@ -419,7 +419,7 @@
     "from sklearn.feature_selection import SelectKBest, mutual_info_regression\n",
     "\n",
     "X, y = data.drop(['pm2_5'], axis=1), data['pm2_5']\n",
-    "k = 20\n",
+    "k = 30\n",
     "selector = SelectKBest(score_func=mutual_info_regression, k=k)\n",
     "X = selector.fit_transform(X, y)"
    ],
@@ -448,6 +448,7 @@
     "scores = dict(zip(selector.feature_names_in_, selector.scores_))\n",
     "scores = sorted(scores.items(), key=lambda x: x[1], reverse=True)[:k]\n",
     "scores_df = pd.DataFrame(scores, columns=['Feature', 'Score'])\n",
+    "test = test[scores_df['Feature']]\n",
     "\n",
     "scores_df.plot(kind='bar', x='Feature', y='Score', figsize=(10, 6), rot=90, title='Oceny wybranych cech')\n",
     "plt.xlabel('Cecha')\n",
@@ -484,7 +485,9 @@
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.model_selection import GridSearchCV"
    ],
    "metadata": {
     "collapsed": false
@@ -506,15 +509,13 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "scaler = StandardScaler()\n",
-    "test = test[scores_df['Feature']]\n",
-    "scaler.fit(X)\n",
-    "X, test = scaler.transform(X), scaler.transform(test.to_numpy())"
+    "X = StandardScaler().fit_transform(X, y)\n",
+    "test = StandardScaler().fit_transform(test)"
    ],
    "metadata": {
     "collapsed": false
    },
-   "id": "3a48dc86e55f85b5",
+   "id": "376c12ae9287f590",
    "execution_count": null
   },
   {
@@ -531,12 +532,51 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=4)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42)"
    ],
    "metadata": {
     "collapsed": false
    },
    "id": "683541f15475f393",
+   "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 2. Las"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "af9e0648ffd0ff85"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "params = {\n",
+    "    'n_estimators': [200, 300],\n",
+    "    'max_depth': np.arange(3, 7),\n",
+    "    'bootstrap': [True],\n",
+    "    'n_jobs': [-1],\n",
+    "    'random_state': [42],\n",
+    "    'warm_start': [True],\n",
+    "    # 'ccp_alpha': np.linspace(0.01, 0.05, 10),\n",
+    "    'max_samples': np.arange(0.1, 1, 10)\n",
+    "}\n",
+    "\n",
+    "gs = GridSearchCV(RandomForestRegressor(), params, scoring='neg_root_mean_squared_error')\n",
+    "gs.fit(X_train, y_train)\n",
+    "\n",
+    "rf = gs.best_estimator_\n",
+    "final_df = pd.concat([final_ids, pd.DataFrame.from_dict({'pm2_5': rf.predict(test)})], axis=1)\n",
+    "final_df.to_csv('RandomForestRegressor.csv', index=False)\n",
+    "rf.get_params()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "3e07fe6d9bbf6cdc",
    "execution_count": null
   },
   {
@@ -598,7 +638,7 @@
     "X_test_tensor = torch.tensor(X_test, device=device, dtype=torch.float)\n",
     "y_train_tensor = torch.tensor(y_train.to_numpy(), device=device, dtype=torch.float)\n",
     "y_test_tensor = torch.tensor(y_test.to_numpy(), device=device, dtype=torch.float)\n",
-    "test = torch.tensor(test, device=device, dtype=torch.float)"
+    "test_tensor = torch.tensor(test, device=device, dtype=torch.float)"
    ],
    "metadata": {
     "collapsed": false
@@ -624,30 +664,29 @@
     "    def __init__(self):\n",
     "        super(Net, self).__init__()\n",
     "        self.layers = nn.Sequential(\n",
-    "            nn.Linear(X_train_tensor.shape[1], 99),\n",
+    "            nn.Linear(X_train_tensor.shape[1], 45),\n",
     "            nn.ReLU(),\n",
     "            nn.Dropout(p=0.2),\n",
-    "            nn.Linear(99, 258),\n",
-    "            nn.ReLU(),\n",
-    "            nn.Linear(258, 124),\n",
-    "            nn.ReLU(),\n",
-    "            nn.Linear(124, 64),\n",
+    "            nn.Linear(45, 245),\n",
     "            nn.ReLU(),\n",
     "            nn.Dropout(p=0.1),\n",
-    "            nn.Linear(64, 1),\n",
+    "            nn.Linear(245, 124),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(p=0.1),\n",
+    "            nn.Linear(124, 1),\n",
     "        )\n",
     "        \n",
     "    def forward(self, x):\n",
     "        return self.layers(x)\n",
     "\n",
     "model = Net().to(device=device)\n",
-    "loss_fn = nn.MSELoss()\n",
+    "loss_fn = nn.L1Loss()\n",
     "optimizer = optim.Adam(\n",
     "    model.parameters(), \n",
     "    lr=0.01, \n",
-    "    betas=(0.7, 0.999), \n",
+    "    betas=(0.9, 0.999), \n",
     "    eps=1e-08, \n",
-    "    weight_decay=1e-3\n",
+    "    weight_decay=1e-5\n",
     ")"
    ],
    "metadata": {
@@ -670,17 +709,22 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "num_epochs = 200\n",
+    "from torch.utils.data import DataLoader\n",
+    "\n",
+    "model.train()\n",
+    "\n",
+    "final_train_tensor = torch.concat((X_train_tensor, y_train_tensor.unsqueeze(dim=1)), dim=1)\n",
+    "dataset = DataLoader(final_train_tensor, batch_size=123, shuffle=True)\n",
+    "\n",
+    "num_epochs = 100\n",
     "for epoch in range(num_epochs):\n",
-    "    model.train()\n",
-    "    optimizer.zero_grad()\n",
-    "    outputs = model(X_train_tensor)\n",
-    "    loss = loss_fn(outputs.squeeze(), y_train_tensor)\n",
-    "    rmse = torch.sqrt(loss)\n",
-    "    loss.backward()\n",
-    "    optimizer.step()\n",
-    "    if (epoch + 1) % 10 == 0:\n",
-    "        print(f'Epoch [{epoch+1}/{num_epochs}], RMSE: {rmse.item():.4f}')"
+    "    for batch_idx, data in enumerate(dataset):\n",
+    "        inputs, targets = data[:, :-1], data[:, -1]\n",
+    "        pred = model(inputs)\n",
+    "        optimizer.zero_grad()\n",
+    "        loss = loss_fn(pred.squeeze(), targets)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()"
    ],
    "metadata": {
     "collapsed": false
@@ -702,10 +746,11 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
+    "model.eval()\n",
     "with torch.no_grad():\n",
     "    y_pred = model(X_test_tensor)\n",
-    "    rmse = torch.sqrt(loss_fn(y_pred.squeeze(), y_test_tensor))\n",
-    "    print(f'RMSE: {rmse.item():.4f}')"
+    "    loss = loss_fn(y_pred.squeeze(), y_test_tensor)\n",
+    "    print(f'MSE: {loss.item():.4f}')"
    ],
    "metadata": {
     "collapsed": false
@@ -728,11 +773,10 @@
    "outputs": [],
    "source": [
     "with torch.no_grad():\n",
-    "    y_pred = model(test)\n",
+    "    y_pred = model(test_tensor)\n",
     "    final_df = pd.concat([final_ids, pd.DataFrame.from_dict({'pm2_5': y_pred.squeeze().numpy(force=True)})], axis=1)\n",
     "    final_df.rename(columns={'id': 'ID'}, inplace=True)\n",
-    "    final_df['pm2_5'] = final_df['pm2_5'].apply(lambda x: np.sqrt(x))\n",
-    "    final_df.to_csv('result.csv', index=False)"
+    "    final_df.to_csv('PyTorchNN.csv', index=False)"
    ],
    "metadata": {
     "collapsed": false
@@ -753,6 +797,16 @@
     "collapsed": false
    },
    "id": "d2128d77bca7e777"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "14015a5a4b3fe050",
+   "execution_count": null
   }
  ],
  "metadata": {
