--- a/AirQuality.ipynb
+++ b/AirQuality.ipynb
@@ -227,7 +227,7 @@
     "starts_with.drop(['month', 'day', 'hour', 'pm2'], inplace=True)\n",
     "starts_with = starts_with[0].tolist()\n",
     "\n",
-    "# correlation()"
+    "correlation()"
    ],
    "metadata": {
     "collapsed": false
@@ -269,7 +269,7 @@
     "            nans.plot(kind='bar', x=date_unit, y=column, ax=ax[x_cord][y_cord])\n",
     "        plt.show()\n",
     "\n",
-    "# plot_nans_based_on()"
+    "plot_nans_based_on()"
    ],
    "metadata": {
     "collapsed": false
@@ -350,7 +350,7 @@
     "                data[column].plot(kind='box', ax=ax[x_cord][y_cord])\n",
     "            plt.show()\n",
     "\n",
-    "# plot_boxplots()"
+    "plot_boxplots()"
    ],
    "metadata": {
     "collapsed": false
@@ -382,7 +382,9 @@
     "    dataframe.drop(index=indexes, inplace=True)\n",
     "    return dataframe\n",
     "\n",
-    "data = del_big_outliers(data, 'sulphurdioxide_so2_column_number_density')"
+    "data = del_big_outliers(data, 'sulphurdioxide_so2_column_number_density')\n",
+    "\n",
+    "data.info()"
    ],
    "metadata": {
     "collapsed": false
@@ -394,7 +396,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "data.info()"
+    "data.head()"
    ],
    "metadata": {
     "collapsed": false
@@ -543,7 +545,17 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### 2. Las"
+    "## <center>Część obliczeniowa</center>"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "4ea367ef409a37a5"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 1. Las"
    ],
    "metadata": {
     "collapsed": false
@@ -561,7 +573,7 @@
     "    'n_jobs': [-1],\n",
     "    'random_state': [42],\n",
     "    'warm_start': [True],\n",
-    "    # 'ccp_alpha': np.linspace(0.01, 0.05, 10),\n",
+    "    'ccp_alpha': np.linspace(0.001, 0.05, 7),\n",
     "    'max_samples': np.arange(0.1, 1, 10)\n",
     "}\n",
     "\n",
@@ -577,17 +589,7 @@
     "collapsed": false
    },
    "id": "3e07fe6d9bbf6cdc",
-   "execution_count": null
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## <center>Część obliczeniowa</center>"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "4ea367ef409a37a5"
+   "execution_count": 0
   },
   {
    "cell_type": "markdown",
@@ -664,13 +666,13 @@
     "    def __init__(self):\n",
     "        super(Net, self).__init__()\n",
     "        self.layers = nn.Sequential(\n",
-    "            nn.Linear(X_train_tensor.shape[1], 45),\n",
+    "            nn.Linear(X_train_tensor.shape[1], 64),\n",
     "            nn.ReLU(),\n",
     "            nn.Dropout(p=0.2),\n",
-    "            nn.Linear(45, 245),\n",
+    "            nn.Linear(64, 170),\n",
     "            nn.ReLU(),\n",
     "            nn.Dropout(p=0.1),\n",
-    "            nn.Linear(245, 124),\n",
+    "            nn.Linear(170, 124),\n",
     "            nn.ReLU(),\n",
     "            nn.Dropout(p=0.1),\n",
     "            nn.Linear(124, 1),\n",
@@ -680,13 +682,15 @@
     "        return self.layers(x)\n",
     "\n",
     "model = Net().to(device=device)\n",
-    "loss_fn = nn.L1Loss()\n",
+    "loss_fn = nn.MSELoss()\n",
     "optimizer = optim.Adam(\n",
     "    model.parameters(), \n",
     "    lr=0.01, \n",
     "    betas=(0.9, 0.999), \n",
     "    eps=1e-08, \n",
-    "    weight_decay=1e-5\n",
+    "    weight_decay=1e-5,\n",
+    "    amsgrad=True,\n",
+    "    fused=True\n",
     ")"
    ],
    "metadata": {
@@ -713,16 +717,20 @@
     "\n",
     "model.train()\n",
     "\n",
-    "final_train_tensor = torch.concat((X_train_tensor, y_train_tensor.unsqueeze(dim=1)), dim=1)\n",
-    "dataset = DataLoader(final_train_tensor, batch_size=123, shuffle=True)\n",
-    "\n",
+    "batch_size = 100\n",
     "num_epochs = 100\n",
+    "\n",
+    "final_train_tensor = torch.concat((X_train_tensor, y_train_tensor.unsqueeze(dim=1)), dim=1)\n",
+    "dataset = DataLoader(final_train_tensor, batch_size=batch_size, shuffle=True)\n",
+    "\n",
     "for epoch in range(num_epochs):\n",
+    "    batch_cost = 0\n",
     "    for batch_idx, data in enumerate(dataset):\n",
     "        inputs, targets = data[:, :-1], data[:, -1]\n",
     "        pred = model(inputs)\n",
     "        optimizer.zero_grad()\n",
     "        loss = loss_fn(pred.squeeze(), targets)\n",
+    "        batch_cost += loss.item()\n",
     "        loss.backward()\n",
     "        optimizer.step()"
    ],
@@ -747,6 +755,7 @@
    "outputs": [],
    "source": [
     "model.eval()\n",
+    "\n",
     "with torch.no_grad():\n",
     "    y_pred = model(X_test_tensor)\n",
     "    loss = loss_fn(y_pred.squeeze(), y_test_tensor)\n",
@@ -773,9 +782,8 @@
    "outputs": [],
    "source": [
     "with torch.no_grad():\n",
-    "    y_pred = model(test_tensor)\n",
-    "    final_df = pd.concat([final_ids, pd.DataFrame.from_dict({'pm2_5': y_pred.squeeze().numpy(force=True)})], axis=1)\n",
-    "    final_df.rename(columns={'id': 'ID'}, inplace=True)\n",
+    "    final_pred = model(test_tensor)\n",
+    "    final_df = pd.concat([final_ids, pd.DataFrame.from_dict({'pm2_5': final_pred.squeeze().numpy(force=True)})], axis=1)\n",
     "    final_df.to_csv('PyTorchNN.csv', index=False)"
    ],
    "metadata": {
@@ -797,16 +805,6 @@
     "collapsed": false
    },
    "id": "d2128d77bca7e777"
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "14015a5a4b3fe050",
-   "execution_count": null
   }
  ],
  "metadata": {
