--- a/AirQuality.ipynb
+++ b/AirQuality.ipynb
@@ -442,8 +442,6 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "scores = dict(zip(selector.feature_names_in_, selector.scores_))\n",
     "scores = sorted(scores.items(), key=lambda x: x[1], reverse=True)[:k]\n",
     "scores_df = pd.DataFrame(scores, columns=['Feature', 'Score'])\n",
@@ -484,9 +482,7 @@
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.model_selection import GridSearchCV"
+    "from sklearn.model_selection import train_test_split"
    ],
    "metadata": {
     "collapsed": false
@@ -552,7 +548,29 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### 1. Las"
+    "### Potrzebne importy"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "b5e7b079774ede3e"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.model_selection import GridSearchCV"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "5dc1a78b81969b11"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 1. Użycie RandomForestRegressor na zbiorze treningowym"
    ],
    "metadata": {
     "collapsed": false
