--- a/AirQuality.ipynb
+++ b/AirQuality.ipynb
@@ -28,7 +28,6 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -39,6 +38,7 @@
     "collapsed": false
    },
    "id": "f44b8667be4021ab",
+   "outputs": [],
    "execution_count": null
   },
   {
@@ -53,7 +53,6 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "data = pd.read_csv('data\\\\Train.csv')\n",
     "test = pd.read_csv('data\\\\Test.csv')\n",
@@ -64,11 +63,11 @@
     "collapsed": false
    },
    "id": "8195eb62bb5596b5",
+   "outputs": [],
    "execution_count": null
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "data.head()"
    ],
@@ -76,6 +75,7 @@
     "collapsed": false
    },
    "id": "dcef3f3066b6dcaa",
+   "outputs": [],
    "execution_count": null
   },
   {
@@ -90,7 +90,6 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "def change_date(dataframe):\n",
     "    dataframe['date'] = pd.to_datetime(dataframe['date'])\n",
@@ -104,6 +103,7 @@
     "collapsed": false
    },
    "id": "96de3f55dc052fc9",
+   "outputs": [],
    "execution_count": null
   },
   {
@@ -118,7 +118,6 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "sns.lineplot(data=data, x='date', y='pm2_5', hue='country')\n",
     "plt.title('Jakość powietrza z podziałem na kraje')"
@@ -127,6 +126,7 @@
     "collapsed": false
    },
    "id": "c080d74ffd38ea41",
+   "outputs": [],
    "execution_count": null
   },
   {
@@ -141,7 +141,6 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "sns.barplot(data=data, x='hour', y='pm2_5', hue='country')\n",
     "plt.title('Jakość powietrza w poszczególnych godzinach z podziałem na kraje')"
@@ -150,6 +149,7 @@
     "collapsed": false
    },
    "id": "1cc187b6375c9eb4",
+   "outputs": [],
    "execution_count": null
   },
   {
@@ -164,7 +164,6 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "sns.barplot(data=data, x='day', y='pm2_5', hue='country')\n",
     "plt.title('Jakość powietrza w każdym dniu tygodnia z podziałem na kraje')"
@@ -173,6 +172,7 @@
     "collapsed": false
    },
    "id": "36c6ec9520527975",
+   "outputs": [],
    "execution_count": null
   },
   {
@@ -187,7 +187,6 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "sns.barplot(data=data, x='month', y='pm2_5', hue='country')\n",
     "plt.title('Jakość powietrza w każdym dniu tygodnia z podziałem na kraje')"
@@ -196,6 +195,7 @@
     "collapsed": false
    },
    "id": "18b6234a9ec5ca95",
+   "outputs": [],
    "execution_count": null
   },
   {
@@ -210,7 +210,6 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "def correlation():\n",
     "    for index, column in enumerate(starts_with):\n",
@@ -233,6 +232,7 @@
     "collapsed": false
    },
    "id": "67d0ec8072327669",
+   "outputs": [],
    "execution_count": null
   },
   {
@@ -257,7 +257,6 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "def plot_nans_based_on(date_unit='day'):\n",
     "    for index, column_group in enumerate(starts_with):\n",
@@ -275,6 +274,7 @@
     "collapsed": false
    },
    "id": "6d6253f26d721fb",
+   "outputs": [],
    "execution_count": null
   },
   {
@@ -289,7 +289,6 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "from sklearn.impute import KNNImputer\n",
     "\n",
@@ -311,7 +310,7 @@
     "    dataframe.drop(to_drop, axis=1, inplace=True)\n",
     "    return dataframe\n",
     "\n",
-    "imputers = [KNNImputer(n_neighbors=10, weights='distance') for _ in range(len(starts_with))]\n",
+    "imputers = [KNNImputer(n_neighbors=9, weights='distance') for _ in range(len(starts_with))]\n",
     "data, test = prepare_dataframe(data), prepare_dataframe(test)\n",
     "data, test = fill_based_on(data), fill_based_on(test)"
    ],
@@ -319,6 +318,7 @@
     "collapsed": false
    },
    "id": "133fbc1ffe6ae43a",
+   "outputs": [],
    "execution_count": null
   },
   {
@@ -333,14 +333,13 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "def plot_boxplots():\n",
     "    for index, column_group in enumerate(starts_with):\n",
     "        similar_columns = [col for col in data.columns if col.startswith(column_group)]\n",
     "        rows = int(np.ceil(len(similar_columns) / 4))\n",
     "        if rows >= 1:\n",
-    "            fig, ax = plt.subplots(nrows=int(np.ceil(len(similar_columns) / 4)), ncols=4, figsize=(20, 20))\n",
+    "            fig, ax = plt.subplots(nrows=rows, ncols=4, figsize=(20, 20))\n",
     "            fig.suptitle(column_group, fontsize=15)\n",
     "            for j, column in enumerate(similar_columns):\n",
     "                x_cord, y_cord = divmod(j, 4)\n",
@@ -353,6 +352,7 @@
     "collapsed": false
    },
    "id": "7901bc4c9d7d1412",
+   "outputs": [],
    "execution_count": null
   },
   {
@@ -367,19 +367,18 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "from scipy.stats import zscore\n",
     "\n",
     "def del_big_outliers(dataframe, column):\n",
     "    vec, indexes = zscore(dataframe[column]), []\n",
     "    for index in range(len(vec)):\n",
-    "        if -2.5 <= vec[index] >= 2.5:\n",
+    "        if -3 <= vec[index] >= 3:\n",
     "            indexes.append(index)\n",
     "    dataframe.drop(index=indexes, inplace=True)\n",
     "    return dataframe\n",
     "\n",
-    "data = del_big_outliers(data, 'sulphurdioxide_so2_column_number_density')\n",
+    "# data = del_big_outliers(data, 'sulphurdioxide_so2_column_number_density')\n",
     "\n",
     "data.info()"
    ],
@@ -387,11 +386,11 @@
     "collapsed": false
    },
    "id": "1e31da0f18fee574",
+   "outputs": [],
    "execution_count": null
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "data.head()"
    ],
@@ -399,6 +398,7 @@
     "collapsed": false
    },
    "id": "3463da86e8af6bd7",
+   "outputs": [],
    "execution_count": null
   },
   {
@@ -413,7 +413,6 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "from sklearn.feature_selection import SelectKBest, mutual_info_regression\n",
     "\n",
@@ -426,6 +425,7 @@
     "collapsed": false
    },
    "id": "c002ded9461774c1",
+   "outputs": [],
    "execution_count": null
   },
   {
@@ -440,7 +440,6 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "scores = dict(zip(selector.feature_names_in_, selector.scores_))\n",
     "scores = sorted(scores.items(), key=lambda x: x[1], reverse=True)[:k]\n",
@@ -455,6 +454,7 @@
     "collapsed": false
    },
    "id": "164483ce288b356a",
+   "outputs": [],
    "execution_count": null
   },
   {
@@ -479,7 +479,6 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split"
@@ -488,6 +487,7 @@
     "collapsed": false
    },
    "id": "537a6c450bd1efa2",
+   "outputs": [],
    "execution_count": null
   },
   {
@@ -502,7 +502,6 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "X = StandardScaler().fit_transform(X, y)\n",
     "test = StandardScaler().fit_transform(test)"
@@ -511,6 +510,7 @@
     "collapsed": false
    },
    "id": "376c12ae9287f590",
+   "outputs": [],
    "execution_count": null
   },
   {
@@ -525,7 +525,6 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42)"
    ],
@@ -533,6 +532,7 @@
     "collapsed": false
    },
    "id": "683541f15475f393",
+   "outputs": [],
    "execution_count": null
   },
   {
@@ -557,7 +557,6 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.model_selection import GridSearchCV"
@@ -565,7 +564,9 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "5dc1a78b81969b11"
+   "id": "5dc1a78b81969b11",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -579,15 +580,15 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "params = {\n",
     "    'n_estimators': [200, 300],\n",
     "    'max_depth': np.arange(3, 7),\n",
     "    'bootstrap': [True],\n",
     "    'n_jobs': [-1],\n",
-    "    'random_state': [42],\n",
+    "    'random_state': [4],\n",
     "    'warm_start': [True],\n",
+    "    'oob_score': [True],\n",
     "    'ccp_alpha': np.linspace(0.001, 0.05, 7),\n",
     "    'max_samples': np.arange(0.1, 1, 10)\n",
     "}\n",
@@ -604,6 +605,7 @@
     "collapsed": false
    },
    "id": "3e07fe6d9bbf6cdc",
+   "outputs": [],
    "execution_count": null
   },
   {
@@ -618,7 +620,6 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "import torch\n",
     "from torch import nn, optim"
@@ -627,6 +628,7 @@
     "collapsed": false
    },
    "id": "498ea0f7dd22079c",
+   "outputs": [],
    "execution_count": null
   },
   {
@@ -641,7 +643,6 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "device = (\n",
     "    'cuda'\n",
@@ -661,6 +662,7 @@
     "collapsed": false
    },
    "id": "e1ea7f2091127d19",
+   "outputs": [],
    "execution_count": null
   },
   {
@@ -675,7 +677,6 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "class Net(nn.Module):\n",
     "    def __init__(self):\n",
@@ -683,14 +684,16 @@
     "        self.layers = nn.Sequential(\n",
     "            nn.Linear(X_train_tensor.shape[1], 64),\n",
     "            nn.ReLU(),\n",
-    "            nn.Dropout(p=0.2),\n",
+    "            nn.Dropout(p=0.25),\n",
     "            nn.Linear(64, 170),\n",
     "            nn.ReLU(),\n",
     "            nn.Dropout(p=0.1),\n",
     "            nn.Linear(170, 124),\n",
     "            nn.ReLU(),\n",
+    "            nn.Linear(124, 75),\n",
+    "            nn.SELU(),\n",
     "            nn.Dropout(p=0.1),\n",
-    "            nn.Linear(124, 1),\n",
+    "            nn.Linear(75, 1),\n",
     "        )\n",
     "        \n",
     "    def forward(self, x):\n",
@@ -704,7 +707,7 @@
     "    betas=(0.9, 0.999), \n",
     "    eps=1e-08, \n",
     "    weight_decay=1e-5,\n",
-    "    amsgrad=True,\n",
+    "    amsgrad=False,\n",
     "    fused=True\n",
     ")"
    ],
@@ -712,6 +715,7 @@
     "collapsed": false
    },
    "id": "5bbca20bcc1becc8",
+   "outputs": [],
    "execution_count": null
   },
   {
@@ -726,7 +730,6 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "from torch.utils.data import DataLoader\n",
     "\n",
@@ -753,6 +756,7 @@
     "collapsed": false
    },
    "id": "ee01653bc24ee293",
+   "outputs": [],
    "execution_count": null
   },
   {
@@ -767,7 +771,6 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "model.eval()\n",
     "\n",
@@ -780,6 +783,7 @@
     "collapsed": false
    },
    "id": "f4907fe921715dfa",
+   "outputs": [],
    "execution_count": null
   },
   {
@@ -794,7 +798,6 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "with torch.no_grad():\n",
     "    final_pred = model(test_tensor)\n",
@@ -805,6 +808,7 @@
     "collapsed": false
    },
    "id": "74ce5044d06598de",
+   "outputs": [],
    "execution_count": null
   },
   {
