--- a/AirQuality.ipynb
+++ b/AirQuality.ipynb
@@ -219,6 +219,7 @@
     "        plt.tight_layout()\n",
     "        plt.show()\n",
     "\n",
+    "\n",
     "final_ids = test['id']\n",
     "data.drop(columns=['id', 'city', 'country', 'site_id', 'date', 'site_latitude', 'site_longitude', 'sulphurdioxide_so2_column_number_density_15km'], inplace=True)\n",
     "test.drop(columns=['id', 'city', 'country', 'site_id', 'date', 'site_latitude', 'site_longitude', 'sulphurdioxide_so2_column_number_density_15km'], inplace=True)\n",
@@ -310,7 +311,8 @@
     "    dataframe.drop(to_drop, axis=1, inplace=True)\n",
     "    return dataframe\n",
     "\n",
-    "imputers = [KNNImputer(n_neighbors=9, weights='distance') for _ in range(len(starts_with))]\n",
+    "\n",
+    "imputers = [KNNImputer(n_neighbors=15, weights='distance') for _ in range(len(starts_with))]\n",
     "data, test = prepare_dataframe(data), prepare_dataframe(test)\n",
     "data, test = fill_based_on(data), fill_based_on(test)"
    ],
@@ -525,9 +527,7 @@
   },
   {
    "cell_type": "code",
-   "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42)"
-   ],
+   "source": "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=4)",
    "metadata": {
     "collapsed": false
    },
@@ -559,6 +559,7 @@
    "cell_type": "code",
    "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn.model_selection import GridSearchCV"
    ],
    "metadata": {
@@ -570,9 +571,7 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### 1. Użycie RandomForestRegressor na zbiorze treningowym"
-   ],
+   "source": "### 1. RandomForestRegressor",
    "metadata": {
     "collapsed": false
    },
@@ -581,8 +580,18 @@
   {
    "cell_type": "code",
    "source": [
+    "def give_the_best(clf):\n",
+    "    gs = GridSearchCV(clf, params, scoring='neg_root_mean_squared_error')\n",
+    "    gs.fit(X_train, y_train)\n",
+    "    return gs.best_estimator_\n",
+    "\n",
+    "def save_to_csv(y_pred, save_as):\n",
+    "    final_df = pd.concat([final_ids, pd.DataFrame.from_dict({'pm2_5': y_pred})], axis=1)\n",
+    "    final_df.to_csv(save_as, index=False)\n",
+    "\n",
+    "\n",
     "params = {\n",
-    "    'n_estimators': [200, 300],\n",
+    "    'n_estimators': np.arange(150, 251, 50),\n",
     "    'max_depth': np.arange(3, 7),\n",
     "    'bootstrap': [True],\n",
     "    'n_jobs': [-1],\n",
@@ -593,12 +602,8 @@
     "    'max_samples': np.arange(0.1, 1, 10)\n",
     "}\n",
     "\n",
-    "gs = GridSearchCV(RandomForestRegressor(), params, scoring='neg_root_mean_squared_error')\n",
-    "gs.fit(X_train, y_train)\n",
-    "\n",
-    "rf = gs.best_estimator_\n",
-    "final_df = pd.concat([final_ids, pd.DataFrame.from_dict({'pm2_5': rf.predict(test)})], axis=1)\n",
-    "final_df.to_csv('RandomForestRegressor.csv', index=False)\n",
+    "rf = give_the_best(RandomForestRegressor())\n",
+    "save_to_csv(rf.predict(test), 'rf.csv')\n",
     "rf.get_params()"
    ],
    "metadata": {
@@ -607,6 +612,58 @@
    "id": "3e07fe6d9bbf6cdc",
    "outputs": [],
    "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Istotność cech lasu",
+   "id": "3d245525f3ad7b86"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### 2. DecisionTreeRegressor",
+   "id": "2bed4923aaaccc77"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "params = {\n",
+    "    'splitter': ['best', 'random'],\n",
+    "    'max_depth': np.arange(3, 7),\n",
+    "    # 'min_samples_split': np.arange(3, 7),\n",
+    "    'random_state': [4],\n",
+    "    'ccp_alpha': np.linspace(0.001, 0.05, 7),\n",
+    "}\n",
+    "\n",
+    "dc = give_the_best(DecisionTreeRegressor())\n",
+    "save_to_csv(rf.predict(test), 'dc.csv')\n",
+    "dc.get_params()"
+   ],
+   "id": "a54ef6ff910bbe89",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Istotność cech drzewa",
+   "id": "b9ef359587282932"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "",
+   "id": "ded5ca851abd9411",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## <center>PyTorch</center>",
+   "id": "d8bd09cb2fae5106"
   },
   {
    "cell_type": "markdown",
@@ -688,9 +745,10 @@
     "            nn.Linear(64, 170),\n",
     "            nn.ReLU(),\n",
     "            nn.Dropout(p=0.1),\n",
-    "            nn.Linear(170, 124),\n",
-    "            nn.ReLU(),\n",
-    "            nn.Linear(124, 75),\n",
+    "            nn.Linear(170, 224),\n",
+    "            nn.SELU(),\n",
+    "            nn.Linear(224, 75),\n",
+    "            nn.Dropout(p=0.1),\n",
     "            nn.SELU(),\n",
     "            nn.Dropout(p=0.1),\n",
     "            nn.Linear(75, 1),\n",
@@ -707,7 +765,7 @@
     "    betas=(0.9, 0.999), \n",
     "    eps=1e-08, \n",
     "    weight_decay=1e-5,\n",
-    "    amsgrad=False,\n",
+    "    amsgrad=False, \n",
     "    fused=True\n",
     ")"
    ],
@@ -742,13 +800,11 @@
     "dataset = DataLoader(final_train_tensor, batch_size=batch_size, shuffle=True)\n",
     "\n",
     "for epoch in range(num_epochs):\n",
-    "    batch_cost = 0\n",
-    "    for batch_idx, data in enumerate(dataset):\n",
-    "        inputs, targets = data[:, :-1], data[:, -1]\n",
+    "    for batch_idx, batch in enumerate(dataset):\n",
+    "        inputs, targets = batch[:, :-1], batch[:, -1]\n",
     "        pred = model(inputs)\n",
     "        optimizer.zero_grad()\n",
     "        loss = loss_fn(pred.squeeze(), targets)\n",
-    "        batch_cost += loss.item()\n",
     "        loss.backward()\n",
     "        optimizer.step()"
    ],
@@ -775,9 +831,9 @@
     "model.eval()\n",
     "\n",
     "with torch.no_grad():\n",
-    "    y_pred = model(X_test_tensor)\n",
-    "    loss = loss_fn(y_pred.squeeze(), y_test_tensor)\n",
-    "    print(f'MSE: {loss.item():.4f}')"
+    "    pred = model(X_test_tensor)\n",
+    "    loss = loss_fn(pred.squeeze(), y_test_tensor)\n",
+    "    print(f'MSE: {np.sqrt(loss.item()):.4f}')"
    ],
    "metadata": {
     "collapsed": false
@@ -801,8 +857,7 @@
    "source": [
     "with torch.no_grad():\n",
     "    final_pred = model(test_tensor)\n",
-    "    final_df = pd.concat([final_ids, pd.DataFrame.from_dict({'pm2_5': final_pred.squeeze().numpy(force=True)})], axis=1)\n",
-    "    final_df.to_csv('PyTorchNN.csv', index=False)"
+    "    save_to_csv(final_pred.squeeze().numpy(force=True), 'nn.csv')"
    ],
    "metadata": {
     "collapsed": false
@@ -824,6 +879,22 @@
     "collapsed": false
    },
    "id": "d2128d77bca7e777"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "data[[col for col in data.columns if 'sensor_azimuth_angle' in col]].describe()",
+   "id": "58599bb53dd71bce",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "data.info()",
+   "id": "7136e54a42736c67",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
