--- a/AirQuality.ipynb
+++ b/AirQuality.ipynb
@@ -97,6 +97,7 @@
     "    dataframe['month'] = dataframe['month'].astype(np.int64)\n",
     "    return dataframe\n",
     "\n",
+    "\n",
     "data, test = change_date(data), change_date(test)"
    ],
    "metadata": {
@@ -269,6 +270,7 @@
     "            nans.plot(kind='bar', x=date_unit, y=column, ax=ax[x_cord][y_cord])\n",
     "        plt.show()\n",
     "\n",
+    "\n",
     "plot_nans_based_on()"
    ],
    "metadata": {
@@ -348,6 +350,7 @@
     "                data[column].plot(kind='box', ax=ax[x_cord][y_cord])\n",
     "            plt.show()\n",
     "\n",
+    "\n",
     "plot_boxplots()"
    ],
    "metadata": {
@@ -379,6 +382,7 @@
     "            indexes.append(index)\n",
     "    dataframe.drop(index=indexes, inplace=True)\n",
     "    return dataframe\n",
+    "\n",
     "\n",
     "# data = del_big_outliers(data, 'sulphurdioxide_so2_column_number_density')\n",
     "\n",
@@ -418,44 +422,32 @@
    "source": [
     "from sklearn.feature_selection import SelectKBest, mutual_info_regression\n",
     "\n",
+    "def select_best_features(not_fitted_X, not_fitted_y, num_of_features):\n",
+    "    sc = SelectKBest(score_func=mutual_info_regression, k=num_of_features)\n",
+    "    sc.fit(not_fitted_X, not_fitted_y)\n",
+    "    return sc\n",
+    "\n",
+    "def plot_selection_scores(sc, num_of_features):\n",
+    "    scores = dict(zip(sc.feature_names_in_, sc.scores_))\n",
+    "    scores = sorted(scores.items(), key=lambda x: x[1], reverse=True)[:num_of_features]\n",
+    "    scores_df = pd.DataFrame(scores, columns=['Feature', 'Score'])\n",
+    "    \n",
+    "    scores_df.plot(kind='bar', x='Feature', y='Score', figsize=(10, 6), rot=90, title='Oceny wybranych cech')\n",
+    "    plt.xlabel('Cecha')\n",
+    "    plt.ylabel('Ocena')\n",
+    "\n",
+    "\n",
     "X, y = data.drop(['pm2_5'], axis=1), data['pm2_5']\n",
-    "k = 30\n",
-    "selector = SelectKBest(score_func=mutual_info_regression, k=k)\n",
-    "X = selector.fit_transform(X, y)"
+    "# k = 30\n",
+    "# selector = select_best_features(X, y, k)\n",
+    "# X, test = selector.transform(X), selector.transform(test)\n",
+    "# \n",
+    "# plot_selection_scores()"
    ],
    "metadata": {
     "collapsed": false
    },
    "id": "c002ded9461774c1",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### Oceny cech"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "6f32f2d770db1fed"
-  },
-  {
-   "cell_type": "code",
-   "source": [
-    "scores = dict(zip(selector.feature_names_in_, selector.scores_))\n",
-    "scores = sorted(scores.items(), key=lambda x: x[1], reverse=True)[:k]\n",
-    "scores_df = pd.DataFrame(scores, columns=['Feature', 'Score'])\n",
-    "test = test[scores_df['Feature']]\n",
-    "\n",
-    "scores_df.plot(kind='bar', x='Feature', y='Score', figsize=(10, 6), rot=90, title='Oceny wybranych cech')\n",
-    "plt.xlabel('Cecha')\n",
-    "plt.ylabel('Ocena')"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "164483ce288b356a",
    "outputs": [],
    "execution_count": null
   },
@@ -482,7 +474,7 @@
   {
    "cell_type": "code",
    "source": [
-    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import StandardScaler, MinMaxScaler, RobustScaler\n",
     "from sklearn.model_selection import train_test_split"
    ],
    "metadata": {
@@ -494,9 +486,7 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### 1. Standaryzacja danych"
-   ],
+   "source": "### 1. Wybór sposobu preprocessingu danych",
    "metadata": {
     "collapsed": false
    },
@@ -505,8 +495,10 @@
   {
    "cell_type": "code",
    "source": [
-    "X = StandardScaler().fit_transform(X, y)\n",
-    "test = StandardScaler().fit_transform(test)"
+    "scaler = StandardScaler()\n",
+    "\n",
+    "X = scaler.fit_transform(X, y)\n",
+    "test = scaler.transform(test)"
    ],
    "metadata": {
     "collapsed": false
@@ -560,7 +552,8 @@
    "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
-    "from sklearn.model_selection import GridSearchCV"
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.metrics import root_mean_squared_error"
    ],
    "metadata": {
     "collapsed": false
@@ -570,14 +563,13 @@
    "execution_count": null
   },
   {
+   "metadata": {},
    "cell_type": "markdown",
-   "source": "### 1. RandomForestRegressor",
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "af9e0648ffd0ff85"
+   "source": "### Otrzymanie najlepszych parametrów",
+   "id": "9831b50f952a24eb"
   },
   {
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "def give_the_best(clf):\n",
@@ -587,11 +579,24 @@
     "\n",
     "def save_to_csv(y_pred, save_as):\n",
     "    final_df = pd.concat([final_ids, pd.DataFrame.from_dict({'pm2_5': y_pred})], axis=1)\n",
-    "    final_df.to_csv(save_as, index=False)\n",
-    "\n",
-    "\n",
+    "    final_df.to_csv(f'result\\\\{save_as}', index=False)"
+   ],
+   "id": "e9d2d344d5d30f55",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### <center>Regresja przy użyciu lasu</center>",
+   "id": "cc72c66908bb5e08"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
     "params = {\n",
-    "    'n_estimators': np.arange(150, 251, 50),\n",
+    "    'n_estimators': [200],\n",
     "    'max_depth': np.arange(3, 7),\n",
     "    'bootstrap': [True],\n",
     "    'n_jobs': [-1],\n",
@@ -604,25 +609,17 @@
     "\n",
     "rf = give_the_best(RandomForestRegressor())\n",
     "save_to_csv(rf.predict(test), 'rf.csv')\n",
-    "rf.get_params()"
+    "print('Parametry lasu: ', rf.get_params())\n",
+    "print('RMSE: ', root_mean_squared_error(y_test, rf.predict(X_test)))"
    ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "3e07fe6d9bbf6cdc",
+   "id": "ed5f063582c3c0e2",
    "outputs": [],
    "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "### Istotność cech lasu",
-   "id": "3d245525f3ad7b86"
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "### 2. DecisionTreeRegressor",
+   "source": "### <center>Regresja przy użyciu drzewa decyzyjnego</center>",
    "id": "2bed4923aaaccc77"
   },
   {
@@ -638,24 +635,11 @@
     "}\n",
     "\n",
     "dc = give_the_best(DecisionTreeRegressor())\n",
-    "save_to_csv(rf.predict(test), 'dc.csv')\n",
-    "dc.get_params()"
+    "save_to_csv(dc.predict(test), 'dc.csv')\n",
+    "print('Parametry lasu: ', dc.get_params())\n",
+    "print('RMSE: ', root_mean_squared_error(y_test, dc.predict(X_test)))"
    ],
    "id": "a54ef6ff910bbe89",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "### Istotność cech drzewa",
-   "id": "b9ef359587282932"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "",
-   "id": "ded5ca851abd9411",
    "outputs": [],
    "execution_count": null
   },
@@ -817,9 +801,7 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### 5. Testowanie sieci neuronowej"
-   ],
+   "source": "### 4. Testowanie sieci neuronowej",
    "metadata": {
     "collapsed": false
    },
@@ -833,7 +815,7 @@
     "with torch.no_grad():\n",
     "    pred = model(X_test_tensor)\n",
     "    loss = loss_fn(pred.squeeze(), y_test_tensor)\n",
-    "    print(f'MSE: {np.sqrt(loss.item()):.4f}')"
+    "    print(f'RMSE: {np.sqrt(loss.item()):.4f}')"
    ],
    "metadata": {
     "collapsed": false
