--- a/AirQuality.ipynb
+++ b/AirQuality.ipynb
@@ -551,7 +551,6 @@
    "cell_type": "code",
    "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.metrics import root_mean_squared_error"
    ],
@@ -573,7 +572,7 @@
    "cell_type": "code",
    "source": [
     "def give_the_best(clf):\n",
-    "    gs = GridSearchCV(clf, params, scoring='neg_root_mean_squared_error')\n",
+    "    gs = GridSearchCV(clf, params, scoring='neg_root_mean_squared_error', n_jobs=-1, cv=3, verbose=1)\n",
     "    gs.fit(X_train, y_train)\n",
     "    return gs.best_estimator_\n",
     "\n",
@@ -596,15 +595,15 @@
    "cell_type": "code",
    "source": [
     "params = {\n",
-    "    'n_estimators': [200],\n",
-    "    'max_depth': np.arange(3, 7),\n",
+    "    'n_estimators': [700],\n",
+    "    'max_depth': np.arange(4, 11),\n",
     "    'bootstrap': [True],\n",
     "    'n_jobs': [-1],\n",
     "    'random_state': [4],\n",
     "    'warm_start': [True],\n",
     "    'oob_score': [True],\n",
     "    'ccp_alpha': np.linspace(0.001, 0.05, 7),\n",
-    "    'max_samples': np.arange(0.1, 1, 10)\n",
+    "    # 'max_samples': np.arange(0.1, 1, 10)\n",
     "}\n",
     "\n",
     "rf = give_the_best(RandomForestRegressor())\n",
@@ -613,33 +612,6 @@
     "print('RMSE: ', root_mean_squared_error(y_test, rf.predict(X_test)))"
    ],
    "id": "ed5f063582c3c0e2",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "### <center>Regresja przy użyciu drzewa decyzyjnego</center>",
-   "id": "2bed4923aaaccc77"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "params = {\n",
-    "    'splitter': ['best', 'random'],\n",
-    "    'max_depth': np.arange(3, 7),\n",
-    "    # 'min_samples_split': np.arange(3, 7),\n",
-    "    'random_state': [4],\n",
-    "    'ccp_alpha': np.linspace(0.001, 0.05, 7),\n",
-    "}\n",
-    "\n",
-    "dc = give_the_best(DecisionTreeRegressor())\n",
-    "save_to_csv(dc.predict(test), 'dc.csv')\n",
-    "print('Parametry lasu: ', dc.get_params())\n",
-    "print('RMSE: ', root_mean_squared_error(y_test, dc.predict(X_test)))"
-   ],
-   "id": "a54ef6ff910bbe89",
    "outputs": [],
    "execution_count": null
   },
@@ -723,13 +695,13 @@
     "    def __init__(self):\n",
     "        super(Net, self).__init__()\n",
     "        self.layers = nn.Sequential(\n",
-    "            nn.Linear(X_train_tensor.shape[1], 64),\n",
+    "            nn.Linear(X_train_tensor.shape[1], 104),\n",
     "            nn.ReLU(),\n",
     "            nn.Dropout(p=0.25),\n",
-    "            nn.Linear(64, 170),\n",
+    "            nn.Linear(104, 270),\n",
     "            nn.ReLU(),\n",
     "            nn.Dropout(p=0.1),\n",
-    "            nn.Linear(170, 224),\n",
+    "            nn.Linear(270, 224),\n",
     "            nn.SELU(),\n",
     "            nn.Linear(224, 75),\n",
     "            nn.Dropout(p=0.1),\n",
@@ -777,7 +749,7 @@
     "\n",
     "model.train()\n",
     "\n",
-    "batch_size = 123\n",
+    "batch_size = 150\n",
     "num_epochs = 100\n",
     "\n",
     "final_train_tensor = torch.concat((X_train_tensor, y_train_tensor.unsqueeze(dim=1)), dim=1)\n",
