--- a/AirQuality.ipynb
+++ b/AirQuality.ipynb
@@ -595,15 +595,14 @@
    "cell_type": "code",
    "source": [
     "params = {\n",
-    "    'n_estimators': [700],\n",
-    "    'max_depth': np.arange(4, 11),\n",
+    "    'n_estimators': [750],\n",
+    "    'max_depth': np.arange(4, 7),\n",
     "    'bootstrap': [True],\n",
     "    'n_jobs': [-1],\n",
-    "    'random_state': [4],\n",
+    "    'random_state': [5],\n",
     "    'warm_start': [True],\n",
     "    'oob_score': [True],\n",
     "    'ccp_alpha': np.linspace(0.001, 0.05, 7),\n",
-    "    # 'max_samples': np.arange(0.1, 1, 10)\n",
     "}\n",
     "\n",
     "rf = give_the_best(RandomForestRegressor())\n",
@@ -698,16 +697,16 @@
     "            nn.Linear(X_train_tensor.shape[1], 104),\n",
     "            nn.ReLU(),\n",
     "            nn.Dropout(p=0.25),\n",
-    "            nn.Linear(104, 270),\n",
+    "            nn.Linear(104, 200),\n",
     "            nn.ReLU(),\n",
     "            nn.Dropout(p=0.1),\n",
-    "            nn.Linear(270, 224),\n",
-    "            nn.SELU(),\n",
-    "            nn.Linear(224, 75),\n",
+    "            nn.Linear(200, 124),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(124, 145),\n",
     "            nn.Dropout(p=0.1),\n",
-    "            nn.SELU(),\n",
+    "            nn.ReLU(),\n",
     "            nn.Dropout(p=0.1),\n",
-    "            nn.Linear(75, 1),\n",
+    "            nn.Linear(145, 1),\n",
     "        )\n",
     "        \n",
     "    def forward(self, x):\n",
@@ -749,7 +748,7 @@
     "\n",
     "model.train()\n",
     "\n",
-    "batch_size = 150\n",
+    "batch_size = 64\n",
     "num_epochs = 100\n",
     "\n",
     "final_train_tensor = torch.concat((X_train_tensor, y_train_tensor.unsqueeze(dim=1)), dim=1)\n",
